# libsys4

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: system4.h
include/system4/: aar.h  acx.h  afa.h  ain.h  ald.h  alk.h  archive.h  buffer.h  cg.h  dasm.h  dcf.h  dlf.h  ex.h  file.h  flat.h  fnl.h  hashtable.h  ini.h  instructions.h  jpeg.h  little_endian.h  mt19937int.h  pcf.h  pms.h  png.h  qnt.h  rou.h  savefile.h  string.h  utfsjis.h  vector.h
src/: aar.c  acx.c  afa.c  afa3.c  ain.c  ajp.c  ald.c  alk.c  archive.c  buffer.c  cg.c  dasm.c  dcf.c  dlf.c  ex.c  file.c  flat.c  fnl.c  hashtable.c  ini.c  ini_lexer.l  ini_parser.y  instructions.c  jpeg.c  mt19937int.c  pcf.c  pms.c  png.c  qnt.c  rou.c  savefile.c  string.c  system.c  utfsjis.c  webp.c
